--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     "react/prefer-stateless-function": 0,
     "react/jsx-filename-extension": 0,
     "no-use-before-define": 0,
-    "import/extensions": 0
+    "import/extensions": 0,
+    "no-trailing-spaces": 0
   },
   "parser": "babel-eslint"
 }
